fix: send dark mode

--- a/src/styles/views/Popup/send.module.sass
+++ b/src/styles/views/Popup/send.module.sass
@@ -36,8 +36,9 @@
   font-size: 1em
   font-weight: 500
   border-radius: 14px
-  border: $borderSize solid variables.$foreground-color
+  border: $borderSize solid variables.$input-border-color
   font-family: 'Poppins', sans-serif
+  background-color: variables.$component-background
 
   &::placeholder
     color: inherit
